// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getOfferTechFeatures(offer) Offer 1675331211247628801 1`] = `
Array [
  Object {
    "commonArea": "14 м²",
    "offerCategory": "GARAGE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 14,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 1910572006735216640 1`] = `
Array [
  Object {
    "commonArea": "78 м²",
    "offerCategory": "ROOMS",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 78,
    },
    "type": "commonArea",
  },
  Object {
    "livingArea": "31 м²",
    "type": "livingArea",
  },
  Object {
    "kitchenArea": "11 м²",
    "type": "kitchenArea",
  },
  Object {
    "roomSpace": Array [
      Object {
        "unit": "SQUARE_METER",
        "value": 15,
      },
      Object {
        "unit": "SQUARE_METER",
        "value": 16,
      },
    ],
    "roomsOffered": 2,
    "roomsTotal": 3,
    "type": "roomAreas",
  },
  Object {
    "offerCategory": "ROOMS",
    "roomsOffered": 2,
    "roomsTotal": 3,
    "type": "rooms",
  },
  Object {
    "floor": 4,
    "floorsTotal": 5,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 2368124054583941120 1`] = `
Array [
  Object {
    "commonArea": "134 м²",
    "offerCategory": "HOUSE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 134,
    },
    "type": "commonArea",
  },
  Object {
    "floor": undefined,
    "floorsTotal": 2,
    "source": undefined,
    "type": "floors",
  },
  Object {
    "lotType": "GARDEN",
    "type": "lotType",
  },
  Object {
    "lotArea": "2 га",
    "type": "lotArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 2388945512219475200 1`] = `
Array [
  Object {
    "commonArea": "1 сотка",
    "offerCategory": "LOT",
    "rawArea": Object {
      "unit": "ARE",
      "value": 1,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 2486833153976465153 1`] = `
Array [
  Object {
    "commonArea": "13 га",
    "offerCategory": "LOT",
    "rawArea": Object {
      "unit": "HECTARE",
      "value": 13,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 2967405380307298463 1`] = `
Array [
  Object {
    "commonArea": "216 м²",
    "offerCategory": "HOUSE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 216,
    },
    "type": "commonArea",
  },
  Object {
    "offerCategory": "HOUSE",
    "roomsOffered": undefined,
    "roomsTotal": 1,
    "type": "rooms",
  },
  Object {
    "lotArea": "3,8 сотки",
    "type": "lotArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 3841539645434907393 1`] = `
Array [
  Object {
    "commonArea": "304 м²",
    "offerCategory": "HOUSE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 304,
    },
    "type": "commonArea",
  },
  Object {
    "floor": undefined,
    "floorsTotal": 3,
    "source": undefined,
    "type": "floors",
  },
  Object {
    "lotType": "GARDEN",
    "type": "lotType",
  },
  Object {
    "lotArea": "32 сотки",
    "type": "lotArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 3982838136380954880 1`] = `
Array [
  Object {
    "commonArea": "120 м²",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 120,
    },
    "type": "commonArea",
  },
  Object {
    "floor": 5,
    "floorsTotal": 5,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 3985417349005242422 1`] = `
Array [
  Object {
    "commonArea": "60,5 м²",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 60.5,
    },
    "type": "commonArea",
  },
  Object {
    "floor": 4,
    "floorsTotal": 7,
    "source": undefined,
    "type": "floors",
  },
  Object {
    "ceilingHeight": 4.3,
    "source": undefined,
    "type": "ceilingHeight",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 4178644675543341312 1`] = `
Array [
  Object {
    "commonArea": "56 м²",
    "offerCategory": "APARTMENT",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 56,
    },
    "type": "commonArea",
  },
  Object {
    "offerCategory": "APARTMENT",
    "roomsOffered": undefined,
    "roomsTotal": 1,
    "type": "rooms",
  },
  Object {
    "floor": 4,
    "floorsTotal": 5,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 4588041564717681408 1`] = `
Array [
  Object {
    "commonArea": "8 соток",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "ARE",
      "value": 8,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5029225678196137728 1`] = `
Array [
  Object {
    "commonArea": "18 м²",
    "offerCategory": "GARAGE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 18,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5152214338702606693 1`] = `
Array [
  Object {
    "commonArea": "64,1 м²",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 64.1,
    },
    "type": "commonArea",
  },
  Object {
    "floor": 1,
    "floorsTotal": 5,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5152266535455580514 1`] = `
Array [
  Object {
    "commonArea": "15 соток",
    "offerCategory": "LOT",
    "rawArea": Object {
      "unit": "ARE",
      "value": 15,
    },
    "type": "commonArea",
  },
  Object {
    "lotType": "IGS",
    "type": "lotType",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5179204074689404343 1`] = `
Array [
  Object {
    "commonArea": "650 м²",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 650,
    },
    "type": "commonArea",
  },
  Object {
    "floor": 5,
    "floorsTotal": 6,
    "source": undefined,
    "type": "floors",
  },
  Object {
    "builtYear": 2016,
    "source": undefined,
    "type": "builtYear",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5211544075310407681 1`] = `
Array [
  Object {
    "commonArea": "432 м²",
    "offerCategory": "HOUSE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 432,
    },
    "type": "commonArea",
  },
  Object {
    "floor": undefined,
    "floorsTotal": 2,
    "source": undefined,
    "type": "floors",
  },
  Object {
    "lotType": "IGS",
    "type": "lotType",
  },
  Object {
    "lotArea": "13,2 сотки",
    "type": "lotArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5217212054901559809 1`] = `
Array [
  Object {
    "commonArea": "99 м²",
    "offerCategory": "ROOMS",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 99,
    },
    "type": "commonArea",
  },
  Object {
    "livingArea": "45 м²",
    "type": "livingArea",
  },
  Object {
    "roomSpace": Array [
      Object {
        "unit": "SQUARE_METER",
        "value": 45,
      },
    ],
    "roomsOffered": 1,
    "roomsTotal": 3,
    "type": "roomAreas",
  },
  Object {
    "offerCategory": "ROOMS",
    "roomsOffered": 1,
    "roomsTotal": 3,
    "type": "rooms",
  },
  Object {
    "floor": 5,
    "floorsTotal": 6,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5254973568545450240 1`] = `Array []`;

exports[`getOfferTechFeatures(offer) Offer 5413677472560653824 1`] = `
Array [
  Object {
    "commonArea": "5 га",
    "offerCategory": "LOT",
    "rawArea": Object {
      "unit": "HECTARE",
      "value": 5,
    },
    "type": "commonArea",
  },
  Object {
    "lotType": "GARDEN",
    "type": "lotType",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5478349734607340288 1`] = `
Array [
  Object {
    "commonArea": "34 м²",
    "offerCategory": "ROOMS",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 34,
    },
    "type": "commonArea",
  },
  Object {
    "livingArea": "34 м²",
    "type": "livingArea",
  },
  Object {
    "roomSpace": Array [
      Object {
        "unit": "SQUARE_METER",
        "value": 34,
      },
    ],
    "roomsOffered": 1,
    "roomsTotal": 2,
    "type": "roomAreas",
  },
  Object {
    "offerCategory": "ROOMS",
    "roomsOffered": 1,
    "roomsTotal": 2,
    "type": "rooms",
  },
  Object {
    "floor": 1,
    "floorsTotal": 4,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5619085084072273152 1`] = `
Array [
  Object {
    "commonArea": "87 м²",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 87,
    },
    "type": "commonArea",
  },
  Object {
    "offerCategory": "COMMERCIAL",
    "roomsOffered": undefined,
    "roomsTotal": 1,
    "type": "rooms",
  },
  Object {
    "floor": 2,
    "floorsTotal": 4,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 5752181058418234624 1`] = `
Array [
  Object {
    "commonArea": "56 м²",
    "offerCategory": "HOUSE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 56,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 6066490924903967463 1`] = `
Array [
  Object {
    "commonArea": "298 м²",
    "offerCategory": "APARTMENT",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 298,
    },
    "type": "commonArea",
  },
  Object {
    "livingArea": "200 м²",
    "type": "livingArea",
  },
  Object {
    "kitchenArea": "30 м²",
    "type": "kitchenArea",
  },
  Object {
    "offerCategory": "APARTMENT",
    "roomsOffered": undefined,
    "roomsTotal": 8,
    "type": "rooms",
  },
  Object {
    "floor": 6,
    "floorsTotal": 8,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 6118565685537966080 1`] = `
Array [
  Object {
    "commonArea": "12 м²",
    "offerCategory": "GARAGE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 12,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 6138723254147916032 1`] = `
Array [
  Object {
    "commonArea": "24 м²",
    "offerCategory": "GARAGE",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 24,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 6302897158639643935 1`] = `
Array [
  Object {
    "commonArea": "34,2 м²",
    "offerCategory": "APARTMENT",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 34.2,
    },
    "type": "commonArea",
  },
  Object {
    "livingArea": "11,2 м²",
    "type": "livingArea",
  },
  Object {
    "kitchenArea": "12,4 м²",
    "type": "kitchenArea",
  },
  Object {
    "roomSpace": Array [
      Object {
        "unit": "SQUARE_METER",
        "value": 11.2,
      },
    ],
    "roomsOffered": undefined,
    "roomsTotal": 1,
    "type": "roomAreas",
  },
  Object {
    "offerCategory": "APARTMENT",
    "roomsOffered": undefined,
    "roomsTotal": 1,
    "type": "rooms",
  },
  Object {
    "floor": 12,
    "floorsTotal": 12,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 6529433429371256064 1`] = `
Array [
  Object {
    "commonArea": "9 соток",
    "offerCategory": "LOT",
    "rawArea": Object {
      "unit": "ARE",
      "value": 9,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 6900000047329405696 1`] = `
Array [
  Object {
    "commonArea": "34 м²",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 34,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 7324333459856457472 1`] = `
Array [
  Object {
    "commonArea": "9 соток",
    "offerCategory": "LOT",
    "rawArea": Object {
      "unit": "ARE",
      "value": 9,
    },
    "type": "commonArea",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 7444370360693349120 1`] = `
Array [
  Object {
    "commonArea": "78 м²",
    "offerCategory": "APARTMENT",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 78,
    },
    "type": "commonArea",
  },
  Object {
    "livingArea": "50 м²",
    "type": "livingArea",
  },
  Object {
    "kitchenArea": "13 м²",
    "type": "kitchenArea",
  },
  Object {
    "offerCategory": "APARTMENT",
    "roomsOffered": undefined,
    "roomsTotal": 2,
    "type": "rooms",
  },
  Object {
    "floor": 2,
    "floorsTotal": 16,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 7825327396047447809 1`] = `
Array [
  Object {
    "commonArea": "47 м²",
    "offerCategory": "APARTMENT",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 47,
    },
    "type": "commonArea",
  },
  Object {
    "offerCategory": "APARTMENT",
    "roomsOffered": undefined,
    "roomsTotal": 1,
    "type": "rooms",
  },
  Object {
    "floor": 17,
    "floorsTotal": 23,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 8108045632893637377 1`] = `
Array [
  Object {
    "commonArea": "52 м²",
    "offerCategory": "APARTMENT",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 52,
    },
    "type": "commonArea",
  },
  Object {
    "livingArea": "30 м²",
    "type": "livingArea",
  },
  Object {
    "kitchenArea": "10 м²",
    "type": "kitchenArea",
  },
  Object {
    "offerCategory": "APARTMENT",
    "roomsOffered": undefined,
    "roomsTotal": 2,
    "type": "rooms",
  },
  Object {
    "floor": 18,
    "floorsTotal": 18,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 8355282261759501312 1`] = `
Array [
  Object {
    "commonArea": "45 м²",
    "offerCategory": "ROOMS",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 45,
    },
    "type": "commonArea",
  },
  Object {
    "livingArea": "19 м²",
    "type": "livingArea",
  },
  Object {
    "kitchenArea": "6 м²",
    "type": "kitchenArea",
  },
  Object {
    "roomSpace": Array [
      Object {
        "unit": "SQUARE_METER",
        "value": 19,
      },
    ],
    "roomsOffered": 1,
    "roomsTotal": 2,
    "type": "roomAreas",
  },
  Object {
    "offerCategory": "ROOMS",
    "roomsOffered": 1,
    "roomsTotal": 2,
    "type": "rooms",
  },
  Object {
    "floor": 5,
    "floorsTotal": 9,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 8601383174272214031 1`] = `
Array [
  Object {
    "commonArea": "96,7 м²",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 96.7,
    },
    "type": "commonArea",
  },
  Object {
    "floor": 1,
    "floorsTotal": 17,
    "source": undefined,
    "type": "floors",
  },
]
`;

exports[`getOfferTechFeatures(offer) Offer 8925888208617835520 1`] = `
Array [
  Object {
    "commonArea": "45 м²",
    "offerCategory": "COMMERCIAL",
    "rawArea": Object {
      "unit": "SQUARE_METER",
      "value": 45,
    },
    "type": "commonArea",
  },
  Object {
    "floor": 2,
    "floorsTotal": 5,
    "source": undefined,
    "type": "floors",
  },
]
`;
